--- a/electron/css/audio.css
+++ b/electron/css/audio.css
@@ -8,4 +8,21 @@
   background-position: center;
 }
 
+#timeline {
+  width:  300px;
+  height: 20px;
+  background: #4011ef;
+  margin-top: 20px;
+  float: left;
+  border-radius: 15px;
+}
+
+#playHead {
+  width:  18px;
+  height: 18px;
+  border-radius: 50%;
+  margin-top: 1px;
+  background: #ffc000;
+}
+
 </style>
